--- a/manifest.json
+++ b/manifest.json
@@ -11,27 +11,21 @@
   ],
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
+      "matches": ["<all_urls>"],
       "js": ["content.js"]
     }
   ],
   "options_page": "options.html",
   "background": {
-    "scripts": [
-      "background.js"
-    ],
-    "persistent": false
+    "scripts": ["background.js"],
+    "persistent": true
   },
-  "page_action": {
+  "externally_connectable": {
+    "matches": ["*://*.amazon.com/*"]
+  },
+  "browser_action": {
     "default_popup": "popup.html",
-    "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
-    }
+    "default_icon": "icon.png"
   },
   "icons": {
     "16": "images/get_started16.png",
